[gd_scene load_steps=16 format=3 uid="uid://cp4gv42g23cl5"]

[ext_resource type="Texture2D" uid="uid://cacflkbre0s7m" path="res://Scenes/TitleScreen/Sprites/cloud.png" id="1_f6ya5"]
[ext_resource type="Script" uid="uid://cyt05rmqfxvh1" path="res://Scenes/TitleScreen/TitleScreen.gd" id="1_wgw8k"]
[ext_resource type="Texture2D" uid="uid://dpy6l5lrfo7do" path="res://Scenes/TitleScreen/Sprites/stand.png" id="2_4lqrc"]
[ext_resource type="Texture2D" uid="uid://ckr1wb7v5smnk" path="res://Scenes/TitleScreen/Sprites/foreground_day.png" id="2_q82or"]
[ext_resource type="Texture2D" uid="uid://bupcrisit6t6h" path="res://Scenes/TitleScreen/Sprites/foreground_night.png" id="3_2lib6"]
[ext_resource type="FontFile" uid="uid://db1mivm1mc3hf" path="res://Assets/Fonts/Belajar Menulis.otf" id="3_at0r8"]
[ext_resource type="Texture2D" uid="uid://bh7p55nvwdr4u" path="res://Scenes/TitleScreen/Sprites/stand_hover.png" id="4_bf2sq"]
[ext_resource type="Texture2D" uid="uid://417r0vxw8l0y" path="res://Scenes/TitleScreen/Sprites/title_screen.png" id="5_fkfbp"]
[ext_resource type="AudioStream" uid="uid://coo8kwlbvt8sg" path="res://Assets/Music/Daytime Folly.mp3" id="9_44kja"]

[sub_resource type="LabelSettings" id="LabelSettings_at0r8"]
font = ExtResource("3_at0r8")
font_size = 45
font_color = Color(1, 0.8000001, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fkfbp"]
font = ExtResource("3_at0r8")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_q82or"]
line_spacing = -9.0
font = ExtResource("3_at0r8")
font_size = 13
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_44kja"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(345.3924, 38)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.5, 523)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wgw8k"]
resource_name = "introduction"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(345.3924, -410), Vector2(345.3924, 38), Vector2(345.3924, -26), Vector2(345.392, -10.4), Vector2(345.3924, 38)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6.5, 779), Vector2(6.5, 513), Vector2(6.5, 523)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.85, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44kja"]
_data = {
&"RESET": SubResource("Animation_44kja"),
&"introduction": SubResource("Animation_wgw8k")
}

[node name="TitleScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgw8k")

[node name="Sky" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.082676694, 0.056099996, 0.17, 1)
metadata/_edit_lock_ = true

[node name="CloudControl" type="Node2D" parent="."]
position = Vector2(-1280, 0)

[node name="Clouds" type="Sprite2D" parent="CloudControl"]
self_modulate = Color(0.21680002, 0.17040001, 0.24, 1)
texture_filter = 1
position = Vector2(0, -52)
scale = Vector2(8.272725, 8.272727)
texture = ExtResource("1_f6ya5")
centered = false

[node name="Clouds2" type="Sprite2D" parent="CloudControl"]
self_modulate = Color(0.21680002, 0.17040001, 0.24, 1)
texture_filter = 1
position = Vector2(1280, -52)
scale = Vector2(8.272725, 8.272727)
texture = ExtResource("1_f6ya5")
centered = false

[node name="ForegroundDay" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.49803922)
position = Vector2(569.1429, 476.25003)
scale = Vector2(6.9285717, 6.928571)
texture = ExtResource("2_q82or")

[node name="ForegroundNight" type="Sprite2D" parent="."]
position = Vector2(569.1429, 476.25003)
scale = Vector2(6.9285717, 6.928571)
texture = ExtResource("3_2lib6")

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -593.5
offset_top = -197.0
offset_right = 593.5
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Play" type="TextureRect" parent="Buttons"]
custom_minimum_size = Vector2(393.125, 0)
layout_mode = 2
texture = ExtResource("2_4lqrc")

[node name="Title" type="Label" parent="Buttons/Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.5
grow_horizontal = 2
grow_vertical = 2
text = "New Run"
label_settings = SubResource("LabelSettings_at0r8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hover" type="TextureRect" parent="Buttons/Play"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.5
offset_top = -9.0
offset_right = 10.375
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bf2sq")

[node name="Button" type="Button" parent="Buttons/Play"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.5
offset_right = -20.625
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Quit" type="TextureRect" parent="Buttons"]
custom_minimum_size = Vector2(393.125, 0)
layout_mode = 2
texture = ExtResource("2_4lqrc")

[node name="Title" type="Label" parent="Buttons/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = SubResource("LabelSettings_fkfbp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hover" type="TextureRect" parent="Buttons/Quit"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.5
offset_top = -9.0
offset_right = 10.375
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bf2sq")

[node name="Button" type="Button" parent="Buttons/Quit"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.5
offset_right = -20.625
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.6076
offset_top = -322.0
offset_right = 254.60779
offset_bottom = 34.000122
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fkfbp")

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 676.5
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
text = "Game by Team 52 for the Games Now! Autumn 2025 Game Jam
Invincitank / TheBigGooner / ratkat / Katrinaaster / Ghosty / PJRM0BM0D / StreamusDark / Lyxilytical / Cassy D Kelly"
label_settings = SubResource("LabelSettings_q82or")
horizontal_alignment = 1
vertical_alignment = 2

[node name="BlackOverlay" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_44kja")
}

[node name="DaytimeTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_44kja")
volume_db = -30.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Buttons/Play/Button" to="." method="start_game"]
[connection signal="pressed" from="Buttons/Quit/Button" to="." method="quit_game"]
